--- a/index.html
+++ b/index.html
@@ -13,13 +13,13 @@
     <title>NesiEXE :3</title>
   </head>
   <body>
+    <div class="background"></div>
     <div class="div center">
       <img class="pfp" src="/things/nesi.png">
     </div>
-    
     <h1 class="welcome">Hi! I'm Nesi<span class="Nblend">EXE</span></h1>
     <p class="center text-small">gay / 18 / Networking nerd / sily</p>
-
+    
     <a class="button text spacer" href="https://nesiexe.xyz">Nesi's Stie [ PC ONLY :3 ]</a>
     <a class="button text spacer" href="https://x.com/nesiexe">Twitter</a>
     <button onclick="Copy()" class="button text spacer">Discord: @nesiexe (auto copy)</button>
@@ -31,7 +31,6 @@
     <a class="button text spacer" href="https://t.me/Nesixyz">Telegram</a>
     <a class="button text spacer" href="https://steamcommunity.com/id/NesiEXE/">Steam</a>
     <a class="button text spacer" href="https://github.com/nesiexe">Github</a>
-
     <div class="text-bottom"><p>:3 powerd</p></div>
   </body>
 </html>
