--- a/index.html
+++ b/index.html
@@ -2,11 +2,17 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
+    <meta property="og:title" content="Nesi's Card!">
+    <meta name="description" content="Nesi's Card! (hope ya like it :3)">
+    <meta name="keywords" content="Nesiexe, NesiEXE, Networking">
+    <meta name="author" content="NesiEXE">
+    <meta property="og:url" content="https://card.nesiexe.xyz">
+    <meta property="og:image" content="https://nesiexe.xyz/card/assets/nesi-DxrugqBz.png">
+    <meta name="twitter:card" content="summary_large_image">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link rel="stylesheet"
-    href="https://fonts.googleapis.com/css?family=Lexend+Deca">
-    <link rel="stylesheet" href="/src/output.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend+Deca">
+    <link rel="stylesheet" href="/src/index.css">
 
     <link rel="icon" type="image/x-icon" href="/things/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -17,7 +23,7 @@
     <div class="div center">
       <img class="pfp" src="/things/nesi.png">
     </div>
-    <h1 class="welcome">Hi! I'm Nesi<span class="Nblend">EXE</span></h1>
+    <h1 class="welcome spacer">Hi! I'm Nesi<span class="Nblend">EXE</span></h1>
     <p class="center text-small">gay / 18 / Networking nerd / sily</p>
     
     <a class="button text spacer" href="https://nesiexe.xyz">Nesi's Stie [ PC ONLY :3 ]</a>
