--- a/index.html
+++ b/index.html
@@ -13,22 +13,22 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend+Deca">
     <link rel="stylesheet" href="/src/index.css">
-
     <link rel="icon" type="image/x-icon" href="/things/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <!-- <meta http-equiv="refresh" content="2"> -->
     <title>NesiEXE :3</title>
   </head>
   <body>
     <div class="background"></div>
-    <div class="div center">
+    <div class="pfp-container center">
       <img class="pfp" src="/things/nesi.png">
     </div>
-    <h1 class="welcome spacer">Hi! I'm Nesi<span class="Nblend">EXE</span></h1>
+    <h1 class="welcome spacer">Hi! I'm Nesi<span class="gradient">EXE</span></h1>
     <p class="center text-small">gay / 18 / Networking nerd / sily</p>
     
     <a class="button text spacer" href="https://nesiexe.xyz">Nesi's Stie [ PC ONLY :3 ]</a>
     <a class="button text spacer" href="https://x.com/nesiexe">Twitter</a>
-    <button onclick="Copy()" class="button text spacer">Discord: @nesiexe (auto copy)</button>
+    <button onclick="Copy()" class="button text-big spacer">Discord: @nesiexe</button>
     <script>
       function Copy() {
         navigator.clipboard.writeText("@nesiexe");
@@ -37,6 +37,6 @@
     <a class="button text spacer" href="https://t.me/Nesixyz">Telegram</a>
     <a class="button text spacer" href="https://steamcommunity.com/id/NesiEXE/">Steam</a>
     <a class="button text spacer" href="https://github.com/nesiexe">Github</a>
-    <div class="text-bottom"><p>:3 powerd</p></div>
+    <div class="text-bottom"><a>:3 powerd</a></div>
   </body>
 </html>
