--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!doctype html>
 <html lang="en">
+  <!-- FUCK CARRD AND LINKTREE, SELF HOST! -->
+  <!-- MADE WITH LOVE BY A HUMAN (Nesi) ON EARTH -->
   <head>
     <meta charset="UTF-8" />
     <meta property="og:title" content="Nesi's Card!">
@@ -7,7 +9,7 @@
     <meta name="keywords" content="Nesiexe, NesiEXE, Networking">
     <meta name="author" content="NesiEXE">
     <meta property="og:url" content="https://card.nesiexe.xyz">
-    <meta property="og:image" content="https://nesiexe.xyz/card/assets/nesi-DxrugqBz.png">
+    <meta property="og:image" content="https://nesiexe.xyz/card/assets/nesi-ASooG7Hd.png">
     <meta name="twitter:card" content="summary_large_image">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,18 +17,17 @@
     <link rel="stylesheet" href="/src/index.css">
     <link rel="icon" type="image/x-icon" href="/things/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <!-- <meta http-equiv="refresh" content="2"> -->
     <title>NesiEXE :3</title>
   </head>
   <body>
-    <div class="background"></div>
     <div class="pfp-container center">
-      <img class="pfp" src="/things/nesi.png">
+      <img class="pfp" id="pfp" src="/things/nesi.png">
     </div>
     <h1 class="welcome spacer">Hi! I'm Nesi<span class="gradient">EXE</span></h1>
+    <div id="now-playing" class="now-playing">Loading...</div>
     <p class="center text-small">gay / 18 / Networking nerd / sily</p>
     
-    <a class="button text spacer" href="https://nesiexe.xyz">Nesi's Stie [ PC ONLY :3 ]</a>
+    <a class="button text spacer" href="https://nesiexe.xyz">Nesi's Site [ PC ONLY :3 ]</a>
     <a class="button text spacer" href="https://x.com/nesiexe">Twitter</a>
     <button onclick="Copy()" class="button text-big spacer">Discord: @nesiexe</button>
     <script>
@@ -37,6 +38,44 @@
     <a class="button text spacer" href="https://t.me/Nesixyz">Telegram</a>
     <a class="button text spacer" href="https://steamcommunity.com/id/NesiEXE/">Steam</a>
     <a class="button text spacer" href="https://github.com/nesiexe">Github</a>
-    <div class="text-bottom"><a>:3 powerd</a></div>
+    <div class="text-bottom"><a>:3 powered</a></div>
+    <!--
+       @@*=@@
+       @     @@
+       @       @@                                          @@@@
+      @@         @                                      @@@    @@
+      @@          @@@                                 @@         @@@
+      @@            @@@@@    @@#@                   @@              @@@
+      @@           @      @@@@# @@               @@@              #   =@@
+      @@          ++          @   @@@@  @@    @@@@                @+    @
+      @@           @                  @@@ @@@@@                    @    %@
+       @           @                       @                       %     @@
+       @            @=                                   @          @    %@
+       @              @                                  :@          =    @@
+       @@           @                                     *@+             *@
+      @@@           #@  #@@@@@         #@@@.              =#@@@+.           @@
+@@@@ @@  @         *@ @@@              -@@@@@@@%           #     *           @
+@  *      =       #*           =======                      @@@  @@@@@@-.=@@@
+@       % #=     +@       .====       .===-                   :@@@    @@@
+@  @@      +     @   #@@#                            :        @@ @@@@@  @
+@      @   =+:  *  @@@@@@@@@    ::         @@@@@@@@%  .===:  +@.        @@  @@
+@@     @@@ .    @  @@@#@@@@@@            @@@@@@@@@@@@     =-#   +    @@   -@ %
+ @@         % = @             @==+@@#    @%        %        @  @@    %%      @
+  @@      :@#  :@             #      @                      @     :#:    %@= @
+   @@     @ %  @              :@   @@                      @      @@#@   @%  @
+    @@      @..@           @                               @         %      @@
+     @      @#=@            @%=@@@@@%   @@                @               -@@
+     @@       @@               @@.-+=@@@@                 @              @@
+      @     +: :@@              @@     @                 @             @@
+      @@ **+      *@             +    @                 %   :**.      @@
+       @           .#@:           @@@@               @@@-+*+-..=**    @
+       @@             @@@@                       @@@@@            *  @@
+       @@                @@@@@+         :@@@ @@@@@@                 @@
+        @@             :    %@@@ .#@@@@:     @@@@+                 #@
+         @              - :=--                  -=#                @@
+         @@             +##                       :==             @@
+          @           ==-                           *-           @@
+          @@                                                    @@ -->
+    <script type="module" src="/src/script.js"></script>
   </body>
 </html>
