--- a/index.html
+++ b/index.html
@@ -15,30 +15,34 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend+Deca">
     <link rel="stylesheet" href="/src/index.css">
-    <link rel="icon" type="image/x-icon" href="/things/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="things/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NesiEXE :3</title>
   </head>
   <body>
-    <div class="pfp-container center">
-      <img class="pfp" id="pfp" src="/things/nesi.png">
-    </div>
-    <h1 class="welcome spacer">Hi! I'm Nesi<span class="gradient">EXE</span></h1>
-    <div id="now-playing" class="now-playing">Loading...</div>
-    <p class="center text-small">gay / 18 / Networking nerd / sily</p>
-    
-    <a class="button text spacer" href="https://nesiexe.xyz">Nesi's Site [ PC ONLY :3 ]</a>
-    <a class="button text spacer" href="https://x.com/nesiexe">Twitter</a>
-    <button onclick="Copy()" class="button text-big spacer">Discord: @nesiexe</button>
-    <script>
-      function Copy() {
-        navigator.clipboard.writeText("@nesiexe");
-      }
-    </script>
-    <a class="button text spacer" href="https://t.me/Nesixyz">Telegram</a>
-    <a class="button text spacer" href="https://steamcommunity.com/id/NesiEXE/">Steam</a>
-    <a class="button text spacer" href="https://github.com/nesiexe">Github</a>
-    <div class="text-bottom"><a>:3 powered</a></div>
+    <main>
+      <div class="pfp-container center">
+        <img class="pfp" id="pfp" src="things/nesi.png" alt="NesiEXE's Profile Picture">
+      </div>
+      <h1 class="welcome spacer">Hi! I'm Nesi<span class="gradient">EXE</span></h1>
+      <div id="now-playing" class="now-playing">Loading...</div>
+      <p class="center text-small">gay / 18 / Networking nerd / sily</p>
+
+      <a class="button text spacer" href="https://nesiexe.xyz">Nesi's Site<div class="mobile" style="margin-left: 5px;">[ PC ONLY :3 ]</div></a>
+      <a class="button text spacer" href="https://x.com/nesiexe">Twitter</a>
+      <button onclick="Copy()" class="button text-big spacer">Discord: @nesiexe</button>
+      <script>
+        function Copy() {
+          navigator.clipboard.writeText("@nesiexe");
+        }
+      </script>
+      <a class="button text spacer" href="https://t.me/Nesixyz">Telegram</a>
+      <a class="button text spacer" href="https://steamcommunity.com/id/NesiEXE/">Steam</a>
+      <a class="button text spacer" href="https://github.com/nesiexe">GitHub</a>
+    </main>
+    <footer>
+      <div class="text-bottom"><a>:3 powered</a></div>
+    </footer>
     <!--
        @@*=@@
        @     @@
