Update favicon and profile picture paths

--- a/index.html
+++ b/index.html
@@ -15,14 +15,14 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Lexend+Deca">
     <link rel="stylesheet" href="/src/index.css">
-    <link rel="icon" type="image/x-icon" href="things/favicon.ico">
+    <link rel="icon" type="image/x-icon" href="/things/favicon.ico">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>NesiEXE :3</title>
   </head>
   <body>
     <main>
       <div class="pfp-container center">
-        <img class="pfp" id="pfp" src="things/nesi.png" alt="NesiEXE's Profile Picture">
+        <img class="pfp" id="pfp" src="/things/nesi.png" alt="NesiEXE's Profile Picture">
       </div>
       <h1 class="welcome spacer">Hi! I'm Nesi<span class="gradient">EXE</span></h1>
       <div id="now-playing" class="now-playing">Loading...</div>
